# TrendFilterPy

./: .gitignore  README.md  pyproject.toml
examples/: dist_testing.ipynb  example_models.py  housing_dataset.ipynb  synthetic_data.ipynb  weighted_regression.ipynb
src/trendfilterpy/: __init__.py  _dists.py  _estimator.py  _links.py  _losses.py  _variables.py
tests/: test_deviance.py  test_estimator.py  test_variables.py
